services/blog-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: devblog
  name: devblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devblog
  template:
    metadata:
      labels:
        app: devblog
    spec:
      volumes:
      - name: public
        emptyDir: {}
      - name: content
        emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: server
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: public
      - image: takutakahashi/blog
        imagePullPolicy: Always
        name: worker
        command:
          - notion-tpl
          - --table-id
          - $(TABLE_ID)
          - --token
          - $(TOKEN)
          - --export-path
          - /src/content/posts
          - --template
          - /etc/notion-tpl/hugo.md.tpl
          - --cmd
          - hugo
        volumeMounts:
        - mountPath: /src/public
          name: public
        - mountPath: /src/content/posts
          name: content
